--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,10 @@ ul,
 ol {
     list-style-type: none;
 }
+button {
+    cursor: pointer;
+}
+/* ====== HEADER STYLES ====== */
 .logo {
     color: #4D5AE5;
     font-family: Raleway, sans-serif;
@@ -36,7 +40,7 @@ ol {
 .nav-link:focus{
     color: #404bbf;
 }
-
+/* ======= ADDRESS ======= */
 .address {
     font-style: normal;
     
@@ -51,4 +55,120 @@ ol {
 .address-link:hover,
 .address-link:focus {
     color: #404BBF;
+}
+/* ======= HERO STYLES ======= */
+.hero {
+    background: #2e2f42;
+}
+.main-title {
+    font-weight: 700;
+    font-size: 56px;
+    line-height: 1.07143;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #fff;
+      
+}
+.order-btn {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: #fff;
+    background-color: #4D5AE5;
+
+}
+.order-btn:hover,
+.order-btn:focus {
+    background-color: #404bbf;
+}
+
+/* ======= Advantages ======= */
+.advantages-title {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+}
+.advantages-title-descr {
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #434455;
+
+}
+/* ======= OUR TEAM ======= */
+.team-section {
+    background: #f4f4fd;
+}
+.team-list-item {
+    background-color: #fff;
+}
+.team-list-title {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #2e2f42;
+
+}
+.team-list-role {
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #434455;
+
+}
+/* ======= PORTFOLIO ======= */
+.portfolio-title {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11111;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #2e2f42;  
+
+}
+.portfolio-list-title {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+}
+.portfolio-list-text {
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #434455;
+    
+}
+/* ======= Footer ====== */
+.page-footer {
+    background-color: #2e2f42;;
+}
+.page-logo {
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #4d5ae5;
+
+}
+.accent-color-footer {
+    color: #f4f4fd;
+}
+.accent-color-footer:hover,
+.accent-color-footer:focus {
+    color: #404bbf;
+}
+.footer-text {
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #f4f4fd;
 }
