--- a/css/styles.css
+++ b/css/styles.css
@@ -102,6 +102,15 @@ button {
 .team-section {
     background: #f4f4fd;
 }
+.team-title {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11111;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #2e2f42;
+
+}
 .team-list-item {
     background-color: #fff;
 }
